--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-csv</artifactId>
+      <version>1.14.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
