--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,13 @@
       <artifactId>opencsv</artifactId>
       <version>5.10</version>
     </dependency>
-    
+
+    <!-- https://mvnrepository.com/artifact/org.locationtech.jts/jts-core -->
+    <dependency>
+      <groupId>org.locationtech.jts</groupId>
+      <artifactId>jts-core</artifactId>
+      <version>1.20.0</version>
+    </dependency>
 
   </dependencies>
 
