--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
           <version>3.1.2</version>
         </plugin>
       </plugins>
-    </pluginManagement>
+    </pluginManagement><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>14</source><target>14</target></configuration></plugin></plugins>
   </build>
 
   <reporting>
